--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,14 @@ body {
     margin: 0px;
     display: flex;
     flex-direction: column;
+    height: 100vh;
     min-height: 100vh;
     font-family: 'Nunito', sans-serif;
 }
 
 header {
-height: 120px;
+height: 81px;
+    min-height: 81px;
     background-color: #1a376a;
     color: white;
     display: flex;
@@ -25,14 +27,22 @@ main {
 /*flex: 1;*/
 /*    justify-content: center;*/
 /*    align-items: center;*/
-    padding: 30px;
+/*    padding: 30px;*/
     background: #E5E5E5;
+    flex: 1;
+    position: relative;
+
 }
 
 footer {
-height: 166px;
+height: 126px;
+    min-height: 126px;
+
     background: #E1E8F1;
-    font-family: 'Nunito', sans-serif;}
+    font-family: 'Nunito', sans-serif;
+    z-index: 1000;
+
+}
 
 p {
     display: block;
@@ -43,8 +53,8 @@ p {
 }
 
 .header_profile_container {
-    width: 375px;
-    height: 80px;
+    width: 300px;
+    height: 60px;
     background: #0B264D;
     display: flex;
     flex-direction: row;
@@ -98,7 +108,7 @@ margin-left: 10px;
 
 .logo-button {
     width:  132px;
-    height: 81px;
+    height: 60px;
     display: flex;
     justify-content: center;
 align-items: center;
@@ -144,6 +154,10 @@ display: flex;
  .calc-container {
 display: flex;
      flex-direction: column;
+     justify-content: center;
+     padding-top: 30px;
+     padding-bottom: 30px;
+
  }
 
  .calc-body {
@@ -151,11 +165,14 @@ display: flex;
      height: 580px;
      background-color: #EAEEF4;
      padding: 60px;
+     margin: 0 auto
 
  } .calc-title {
-    margin: 20px;
-    font-weight: 700;
+        width: 610px;
+        font-weight: 700;
     font-size: 36px;
+        margin: 0 auto
+
     }
 
    #numpad-textarea {
@@ -288,7 +305,7 @@ font-size: 30px;
     background: #FFFFFF;
     border: 2px solid #CBD3DE;
     box-sizing: border-box;
-    margin: 10px;
+    margin: 10px auto;
     padding: 40px;
 }
 
@@ -327,7 +344,8 @@ font-size: 30px;
     height: auto;
     /*padding-left: 180px;*/
     /*padding-right: 180px;*/
-    margin: 0 auto;
+    margin: 0 auto ;
+    margin-bottom: 20px;
 
 }
 .nav-panel {
@@ -402,4 +420,108 @@ font-size: 30px;
 #tagtable {
     font-size: 4vw;
     margin-left: 10px;
+}
+
+.settings__container {
+    display: flex;
+    flex-direction: row;
+    /*width: 100vw;*/
+    /*min-height: 70vh;*/
+    /*position: absolute;*/
+    height: 100%;
+    left:0;
+    right:0;
+    top:0;
+    bottom:0;
+}
+
+.settings__container_left {
+flex: 2;
+    background-color: #1e3351;
+}
+.settings__container_right {
+flex: 4;
+}
+
+.settings__userdata_wrapper {
+    padding: 30px 30px 30px 30px;
+    width: 60%;
+    /*padding-right: 20vw;*/
+}
+.reg_input {
+    width: 250px;
+    /*margin-right: 10px;*/
+    font-weight: normal;
+    height: 30px;
+
+}
+
+.reg_input_style {
+    box-shadow: 0px 0px 4px 0px rgb(54, 79, 115);
+    border: 0px;
+    outline:0px;
+}
+
+.reg_input_date {
+    width: 50px;
+}
+
+.settings__userdata_grid_container {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-areas: "name date"
+                       "login  email";
+}
+.settings__userdata_grid_password_container {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-areas: "pass1 pass2";
+}
+.settings__userdata_pass1 {
+    grid-area: pass1;
+}
+.settings__userdata_date {
+    grid-area: pass2;
+}
+
+
+.settings__userdata_name {
+    grid-area: name;
+}
+.settings__userdata_date {
+    grid-area: date;
+}
+.settings__userdata_login {
+    grid-area: login;
+}
+.settings__userdata_email {
+    grid-area: email;
+}
+
+.settings__userdata_date_flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.settings__button{
+    /*display: flex;*/
+    /*justify-content: center;*/
+    margin-left: 30px;
+    width: 250px;
+    height: 30px;
+    background: #1389E6;
+    color: white;
+    font-family: Nunito;
+    border: none;
+    box-shadow: 0 0 10px #1389E6 ;
+
+
+}
+
+.settings__button:active {
+    box-shadow: 0 0 12px #1389E6 ;
+    background: #095fa4;
+
+
 }
