--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,14 @@ body {
     margin: 0px;
     display: flex;
     flex-direction: column;
+    height: 100vh;
     min-height: 100vh;
     font-family: 'Nunito', sans-serif;
 }
 
 header {
-height: 120px;
+height: 81px;
+    min-height: 81px;
     background-color: #1a376a;
     color: white;
     display: flex;
@@ -25,14 +27,22 @@ main {
 /*flex: 1;*/
 /*    justify-content: center;*/
 /*    align-items: center;*/
-    padding: 30px;
+/*    padding: 30px;*/
     background: #E5E5E5;
+    flex: 1;
+    position: relative;
+
 }
 
 footer {
-height: 166px;
+height: 126px;
+    min-height: 126px;
+
     background: #E1E8F1;
-    font-family: 'Nunito', sans-serif;}
+    font-family: 'Nunito', sans-serif;
+    z-index: 1000;
+
+}
 
 p {
     display: block;
@@ -41,10 +51,13 @@ p {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
 }
+h1,h2,h3,h4,h5,h6 {
+    margin: 0;
+}
 
 .header_profile_container {
-    width: 375px;
-    height: 80px;
+    width: 300px;
+    height: 60px;
     background: #0B264D;
     display: flex;
     flex-direction: row;
@@ -53,7 +66,93 @@ p {
 }
 .header_profile_picture {
     border-radius: 50%;
+    width: 50px;
+    height: 50px;
 }
+
+
+
+
+.profile_picture_settings_container {
+    top: 50px;
+    right: 50px;
+    width: 200px;
+    height: 200px;
+    display: block;
+    position: relative;
+    overflow: hidden;
+    left: 50%;
+    transform: translate(-50%, 0px);
+}
+
+.profile_picture_settings_container > img {
+    display: block;
+    position: relative;
+    width: 200px;
+    height: 200px;
+}
+
+.profile_picture_settings_container_button a {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-decoration: none;
+}
+
+/*.profile_picture_settings {*/
+/*    !*margin-top: 15%;*!*/
+/*    !*margin-right: 15%;*!*/
+/*    position: relative;*/
+/*    width: 200px;*/
+/*    height: 200px;*/
+/*    display: block;*/
+/*    position: relative;*/
+/*}*/
+
+
+.profile_picture_settings:hover  {
+    background: black;
+    /*filter: blur(1px);*/
+    opacity: 0.5;
+}
+
+.profile_picture_settings_container:hover .profile_picture_settings_container_button {
+    /*filter: blur(1px);*/
+    opacity: 0.7;
+    z-index: 1000;
+    height: 200px;
+    width: 200px;
+}
+
+/*ссылка на изменение фото при наведении*/
+.profile_picture_settings_container_button {
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    color: white;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 200px;
+    width: 200px;
+    z-index: 0;
+    background-color: #131212;
+    border-radius: 50%;
+
+}
+
+
+
+
+
+
+
+
 .clock-container {
     display: flex;
     flex-direction: row;
@@ -65,6 +164,8 @@ p {
     color: white;
     font-size: 24px;
     margin-left: 20px;
+    color: white;
+    text-decoration: none;
 }
 .clock {font-size: 42px;
 margin-left: 10px;
@@ -76,6 +177,8 @@ margin-left: 10px;
     /*height: 81px;*/
     display: flex;
     flex-direction: row;
+    color: white;
+
 
 }
 
@@ -92,18 +195,21 @@ margin-left: 10px;
     display: flex;
     flex-direction: row;
     height: 100%;
-    justify-content: right;
+    justify-content: center;
     align-items: center;
 }
 
 .logo-button {
     width:  132px;
-    height: 81px;
+    height: 60px;
     display: flex;
     justify-content: center;
 align-items: center;
     background: #1389E6;
     font-weight: bold;
+    color: white;
+    text-decoration:none;
+
 }
 
 /*.logo-button-footer {*/
@@ -134,6 +240,9 @@ display: flex;
     display: flex;
     align-items: center;
     cursor: pointer;
+    /*color: #000 !important;*/
+    text-decoration: none;
+    color: white;
 }
 
 .menu-button:hover {
@@ -144,6 +253,10 @@ display: flex;
  .calc-container {
 display: flex;
      flex-direction: column;
+     justify-content: center;
+     padding-top: 30px;
+     padding-bottom: 30px;
+
  }
 
  .calc-body {
@@ -151,11 +264,14 @@ display: flex;
      height: 580px;
      background-color: #EAEEF4;
      padding: 60px;
+     margin: 0 auto
 
  } .calc-title {
-    margin: 20px;
-    font-weight: 700;
+        width: 610px;
+        font-weight: 700;
     font-size: 36px;
+        margin: 0 auto
+
     }
 
    #numpad-textarea {
@@ -277,19 +393,23 @@ font-size: 30px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     height: auto;
     width: 82vw;
     margin: 0 auto;
 }
 .html_css_div {
-    width: 40vw;
+    width: 620px;
     height: auto;
     background: #FFFFFF;
     border: 2px solid #CBD3DE;
     box-sizing: border-box;
-    margin: 10px;
+    margin: 10px auto;
     padding: 40px;
+}
+.html_css_div_flex {
+    display: flex;
+    flex-direction: row;
 }
 
 .html_css_div > h2 {
@@ -302,9 +422,15 @@ font-size: 30px;
 }
 .html_css_div > p {
     color: #041122;
-    font-size: 18px;
+    font-size: 15px;
     line-height: 140%;
 }
+
+.html_css_div_flex > div > img {
+    padding-right: 10px;
+    padding-bottom: 10px;
+}
+
 .html_css_div > h3 {
     color: #000000 ;
     font-style: normal;
@@ -327,7 +453,8 @@ font-size: 30px;
     height: auto;
     /*padding-left: 180px;*/
     /*padding-right: 180px;*/
-    margin: 0 auto;
+    margin: 0 auto ;
+    margin-bottom: 20px;
 
 }
 .nav-panel {
@@ -402,4 +529,111 @@ font-size: 30px;
 #tagtable {
     font-size: 4vw;
     margin-left: 10px;
+}
+
+.settings__container {
+    display: flex;
+    flex-direction: row;
+    /*width: 100vw;*/
+    /*min-height: 70vh;*/
+    /*position: absolute;*/
+    height: 100%;
+    left:0;
+    right:0;
+    top:0;
+    bottom:0;
+}
+
+.settings__container_left {
+    /*position: relative;*/
+    display: flex;
+    justify-content: right;
+flex: 2;
+    background-color: #1e3351;
+}
+.settings__container_right {
+flex: 4;
+}
+
+.settings__userdata_wrapper {
+    padding: 30px 30px 30px 30px;
+    width: 60%;
+    /*padding-right: 20vw;*/
+}
+.reg_input {
+    width: 250px;
+    /*margin-right: 10px;*/
+    font-weight: normal;
+    height: 30px;
+
+}
+
+.reg_input_style {
+    box-shadow: 0px 0px 4px 0px rgb(54, 79, 115);
+    border: 0px;
+    outline:0px;
+}
+
+.reg_input_date {
+    width: 75px;
+}
+
+.settings__userdata_grid_container {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-areas: "name date"
+                       "login  email";
+}
+.settings__userdata_grid_password_container {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-areas: "pass1 pass2";
+}
+.settings__userdata_pass1 {
+    grid-area: pass1;
+}
+.settings__userdata_date {
+    grid-area: pass2;
+}
+
+
+.settings__userdata_name {
+    grid-area: name;
+}
+.settings__userdata_date {
+    grid-area: date;
+}
+.settings__userdata_login {
+    grid-area: login;
+}
+.settings__userdata_email {
+    grid-area: email;
+}
+
+.settings__userdata_date_flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.settings__button{
+    /*display: flex;*/
+    /*justify-content: center;*/
+    margin-left: 30px;
+    width: 250px;
+    height: 30px;
+    background: #1389E6;
+    color: white;
+    font-family: Nunito;
+    border: none;
+    box-shadow: 0 0 10px #1389E6 ;
+
+
+}
+
+.settings__button:active {
+    box-shadow: 0 0 12px #1389E6 ;
+    background: #095fa4;
+
+
 }
